<resources>
    <string name="app_name">NotesManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_to_create_edit_notes">Button to create and edit notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="saveNote">Button to save notes changes</string>
    <string name="last_updated">Last updated</string>
    <string name="last_updated_date_format">MMM dd, HH::mm::ss</string>
    <string name="delete_note">Delete Note</string>
    <string name="want_to_delete_note">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="words">Words: </string>
</resources>