<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/note_item_height"
    app:cardCornerRadius="@dimen/note_item_radius"
    app:cardElevation="@dimen/note_item_elevation"
    app:cardUseCompatPadding="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/note_item_margin">

        <TextView
            android:id="@+id/note_item_title"
            style="@style/note_item_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/note_item_content"
            style="@style/note_item_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/content"
            app:layout_constraintTop_toBottomOf="@id/note_item_title"/>

        <TextView
            android:id="@+id/note_item_last_updated"
            style="@style/note_item_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/note_item_word_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/words"
            style="@style/note_item_detail_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>